<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VisPratV0</string>
    <string name="action_settings">Settings</string>
    <string name="inviteConnexion">Identifiez-vous</string>
    <string name="inviteDepts">Départements :</string>
    <string name="inviteMedecins">Médecins du département</string>
    <string name="inviteRapportsVisites">Vos rapports de visites</string>
    <string name="loginVisiteur">Login du visiteur</string>
    <string name="boutonValider">Valider</string>
    <string name="boutonAjouter">Ajouter</string>
    <string name="boutonModifier">Modifier</string>
    <string name="boutonRetour">Retour</string>
    <string name="motPasseVisiteur">Votre mot de passe</string>
    <string name="msgErrChampVide">Au moins un champ de saisie n\'est pas renseigné !</string>
    <string name="msgErrConnexionInvalide">Login et/ou mot de passe invalide</string>
    <string name="msgErrUpdateMedecin">Erreur lors de la modification des données du médecin</string>
    <string name="title_activity_depts">Liste des départements</string>
    <string name="title_activity_medecins">Médecins</string>
    <string name="title_activity_rapports_visites">Rapports de visite</string>
    <string name="title_activity_add_rapports_visites">Ajouter rapport de visite</string>
    <string name="title_activity_medicamments">Liste Médicamment</string>
    <string name="title_activity_medecin_detail">Détail médecin</string>

    <string name="inviteNom">Nom:</string>
    <string name="invitePrenom">Prénom:</string>
    <string name="inviteAdresse">Adresse:</string>
    <string name="inviteCodePostal">Code Postal:</string>
    <string name="inviteTel">Téléphone:</string>
    <string name="inviteEmail">E-mail:</string>
    <string name="inviteSpecialiteComplementaire">Spécialité Complémentaire:</string>
    <string name="inviteVille">Ville:</string>

    <string name="hintNom">Durand</string>
    <string name="hintPrenom">Paul</string>
    <string name="hintVille">Rennes</string>
    <string name="action_share" />
    <string name="title_activity_settings">Settings</string>

    <string name="codeStatut">Code Statut </string>
    <string name="msgStatut">Message Statut : </string>
    <string name="data">Data : </string>
    <string name="verbeHTTP">Verble HTTP : </string>
    <string name="URI">URI : </string>
    <string name="IOException">IOException pour convertir le flux en chaîne </string>
    <string name="errException">Erreur exception : </string>
    <string name="aucuneDonnees">Aucune donnée modifiée</string>
    <string name="msgErrRecupMedecins">Erreur récupération données sur les médecins : </string>

    <string name="addIdMedecin">ID Médecin</string>
    <string name="addDateVisite">Date de la visite</string>
    <string name="addDateCreaRapport">Date de la création du rapport</string>
    <string name="addBilan">Bilan</string>
    <string name="addCoefConfiance">Coéficient de confiance</string>
    <string name="addIdMotifVisite">ID Motif de la visite</string>
    <string name="rapportAjoute">Rapport de visite ajouté avec succès</string>

</resources>